Fixes scrollbar issues.

--- a/scout/static/scout/css/critical.scss
+++ b/scout/static/scout/css/critical.scss
@@ -6,7 +6,7 @@ file.
 
 // header
 
-.scout-header { background: #333; position: fixed; top:0; left:0; right: 0; z-index: 999;
+.scout-header { background: #333; position: absolute; top:0; left:0; right: 0; z-index: 999;
 
 h1 {
     margin: 0;
