--- a/scout/static/scout/css/desktop.scss
+++ b/scout/static/scout/css/desktop.scss
@@ -1,24 +1,24 @@
 // sass variables
 
-$view-panel-width: 600px;
+$view-panel-width: 450px;
 
 // desktop styles
 
 body { overflow: hidden; }
 
 .scout-wrapper { position:absolute; width: $view-panel-width; top:0; bottom:0; -webkit-box-shadow: 5px 0 20px 0 rgba(0,0,0,0.3);
-box-shadow: 5px 0 20px 0 rgba(0,0,0,0.3); }
+box-shadow: 5px 0 20px 0 rgba(0,0,0,0.3); z-index: 1;}
 
 .scout-header { width: $view-panel-width; }
 
 // scrolling body
-.scout-scroll { position: absolute; top:145px; bottom: 38px; width: $view-panel-width; left:0; overflow: scroll; margin-top: 0;
+.scout-scroll { position: fixed; top:145px; bottom: 38px; width: $view-panel-width; left:0; overflow: scroll; margin-top: 0;
 
     // content
     .scout-content {
 
         // google map
-        .scout-map { position: fixed; top:0; left: $view-panel-width; bottom: 0; right: 0; overflow: scroll; background: #ddd; z-index: -1 !important; }
+        //.scout-map { position: fixed; top:0; left: $view-panel-width; bottom: 0; right: 0; overflow: scroll; background: #ddd; z-index: -1 !important; }
 
     }
 
